# astrochem_embedding

./: .gitignore  LICENSE.rst  noxfile.py  pyproject.toml
docs/: conf.py
models/: VICGAE.ckpt
notebooks/: testing.ipynb
scripts/: convert_tokens.py  generate_molecules_from_kida.py  preprocess_data.py  train.py
src/astrochem_embedding/: __init__.py  __main__.py  utils.py
src/astrochem_embedding/layers/: __init__.py  layers.py
src/astrochem_embedding/models/: __init__.py  layers.py  models.py
src/astrochem_embedding/models/tests/: test_models.py
src/astrochem_embedding/pipeline/: __init__.py  data.py
src/astrochem_embedding/tests/: test_utils.py
