[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "astrochem_embedding"
description = "Language models for astrochemistry"
authors = [{ name = "Kelvin Lee", email = "kin.long.kelvin.lee@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dynamic = ["version", "readme"]
keywords = ["astrochemistry", "nlp", "self-supervised-learning"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.7",
    "torchinfo>=1.5.3",
    "pytorch-lightning>=2.4.0",
    "selfies>=2.1.2",
    "ruamel.yaml>=0.18.6",
    "scikit-learn>=1.5.1",
    "pandas>=2.0.3",
    "torch>=2.4.0",
    "tensorboard>=2.14.0",
    "joblib>=1.4.2",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "coverage",
    "safety>=1.10.3",
    "flake8>=3.9.2",
    "black>=21.10b0",
    "flake8-bandit>=2.1.2",
    "flake8-bugbear>=21.4.3",
    "flake8-docstrings>=1.6.0",
    "pre-commit-hooks>=4.0.1",
    "isort",
    "rdkit>=2024.3.5",
    "palettable>=3.3.3",
    "nox>=2024.4.15",
]


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["astrochem_embedding"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.setuptools.dynamic]
version = { attr = "astrochem_embedding.__version__" }
readme = { file = "README.rst" }
